ingress-alb-different-namespaces/ingress-alb-backend-service-apple.yaml
kind: Pod
apiVersion: v1
metadata:
  name: apple-app
  namespace: apple
  labels:
    app: apple
spec:
  containers:
    - name: apple-app
      image: hashicorp/http-echo
      args:
        - "-text=apple"

---

kind: Service
apiVersion: v1
metadata:
  name: apple-service
  namespace: apple
spec:
  type: NodePort
  selector:
    app: apple
  ports:
    - port: 5678 # Default port for image	
      targetPort: 5678
