ingress-alb-different-namespaces/ingress-alb-backend-service-banana.yaml
kind: Pod
apiVersion: v1
metadata:
  name: banana-app
  namespace: banana
  labels:
    app: banana
spec:
  containers:
    - name: banana-app
      image: hashicorp/http-echo
      args:
        - "-text=banana"

---

kind: Service
apiVersion: v1
metadata:
  name: banana-service
  namespace: banana
spec:
  type: NodePort
  selector:
    app: banana
  ports:
    - port: 5678 # This is the port of the service’s internal cluster IP
      targetPort: 5678 # This is the target port of the backing pods
